Update .env.example file with new values

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=PayNote
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:XR4fc5iwhmVn1yj0ZkY0ONBcXRdOoYDC0ANdm4MI9qU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=db_paynote
 DB_USERNAME=root
 DB_PASSWORD=
 
